# cargo-features-manager

./: CHANGELOG.md  Cargo.toml  Features.toml  Known-Features.toml  LICENSE  README.md  todo.md  todos.md
.github/workflows/: ci-cd.yml  lint.yml
src/: crates.rs  dependency.rs  dependency_builder.rs  display.rs  document.rs  index.rs  main.rs  package.rs  prune.rs  save.rs  scroll_selector.rs  util.rs
src/dependencies/: dependency.rs  dependency_builder.rs  mod.rs
src/edit/: display.rs
src/edit/filter_view/: item.rs  mod.rs
src/io/: mod.rs  save.rs  util.rs
src/io/parsing/: dependency.rs  package.rs  workspace.rs
src/parsing/: dependency.rs  mod.rs  package.rs  workspace.rs
src/project/: document.rs  mod.rs  package.rs
src/project/dependencies/: mod.rs  util.rs
src/project/dependency/: feature.rs  mod.rs  util.rs
src/prune/: display.rs  mod.rs  parse.rs
src/rendering/: display.rs  mod.rs  scroll_selector.rs  search.rs
src/rendering/filter_view/: item.rs  mod.rs
