[package]
name = "cargo-features-manager"
version = "0.8.3"
edition = "2021"
authors = ["ToBinio"]
license = "MIT"
description = "A tui tool to enable/disable & prune dependency features"
categories = ["command-line-utilities"]
repository = "https://github.com/ToBinio/cargo-features-manager"
keywords = ["cli", "manager", "cargo", "crates", "feature"]
homepage = "https://github.com/ToBinio/cargo-features-manager.git"
readme = "README.md"
rust-version = "1.64.0"
include = ["src/**/*", "LICENSE", "README.md", "Known-Features.toml"]

[dependencies]
color-eyre = "0.6.3"
cargo-platform = "0.1.8"
cargo_metadata = "0.18.1"
clap = { version = "4.5.11", features = ["derive"] }
clap_complete = "4.5.11"
console = { version = "0.15.8", default-features = false }
ctrlc = "3.4.4"
fuzzy-matcher = "0.3.7"
itertools = { version = "0.13.0", default-features = false, features = ["use_alloc"] }
semver = { version = "1.0.23", default-features = false }
toml = { version = "0.8.16", default-features = false }
toml_edit = "0.22.17"

[[bin]]
name = "cargo-features"
path = "src/main.rs"
