[package]
name = "cargo-features-manager"
version = "0.10.2"
edition = "2024"
authors = ["ToBinio"]
license = "MIT"
description = "A tui tool to enable/disable & prune dependency features"
categories = ["command-line-utilities"]
repository = "https://github.com/ToBinio/cargo-features-manager"
keywords = ["cli", "manager", "cargo", "crates", "feature"]
homepage = "https://github.com/ToBinio/cargo-features-manager.git"
readme = "README.md"
rust-version = "1.85.0"
include = ["src/**/*", "LICENSE", "README.md", "Known-Features.toml"]

[dependencies]
color-eyre = "0.6.3"
cargo-platform = "0.1.9"
cargo_metadata = "0.19.1"
clap = { version = "4.5.31", features = ["derive"] }
clap_complete = "4.5.46"
console = { version = "0.15.10", default-features = false }
ctrlc = "3.4.5"
fuzzy-matcher = "0.3.7"
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
semver = { version = "1.0.25", default-features = false }
toml_edit = "0.22.24"
tempfile = { version = "3.20.0", default-features = false }
copy_dir = "0.1.3"

[[bin]]
name = "cargo-features"
path = "src/main.rs"
