[package]
name = "cargo-features-manager"
version = "0.11.1"
edition = "2024"
authors = ["ToBinio"]
license = "MIT"
description = "A tui tool to enable/disable & prune dependency features"
categories = ["command-line-utilities"]
repository = "https://github.com/ToBinio/cargo-features-manager"
keywords = ["cli", "manager", "cargo", "crates", "feature"]
homepage = "https://github.com/ToBinio/cargo-features-manager.git"
readme = "README.md"
rust-version = "1.86.0"
include = ["src/**/*", "LICENSE", "README.md", "Known-Features.toml"]

[dependencies]
color-eyre = "0.6.3"
ctrlc = "3.4.5"

cargo_metadata = "0.23.0"

clap = { version = "4.5.56", features = ["derive"] }
clap_complete = "4.5.65"

console = { version = "0.16.1", features = ["std"], default-features = false }
indicatif = "0.18.3"

itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
toml_edit = "0.25.0"

semver = { version = "1.0.25", default-features = false }
fuzzy-matcher = "0.3.7"

tempfile = { version = "3.20.0", default-features = false }
dircpy = { version = "0.3.19", default-features = false }

[[bin]]
name = "cargo-features"
path = "src/main.rs"
